turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:6: error: value Black is not a member of object java.awt.Color
		if (getCouleurSol() == Color.Black)
                                             ^LangtonsAnt:8: error: value White is not a member of object java.awt.Color
			setCouleurSol (Color.White)
                                             ^LangtonsAnt:12: error: value White is not a member of object java.awt.Color
		if (getCouleurSol() == Color.White)
                                             ^LangtonsAnt:14: error: value Black is not a member of object java.awt.Color
			setCouleurSol (Color.Black)
                                             ^